[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix-Web for handling HTTP requests and responses
actix-web = "4.0"

# Tera for rendering HTML templates
tera = "1.17"

# Reqwest for making HTTP requests to the Python API
reqwest = { version = "0.11", features = ["json"] }

# Serde for JSON serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MaxMindDB for IP geolocation using GeoLite2-Country.mmdb
maxminddb = "0.17"

# Chrono for handling timestamps (used in Telegram notifications)
chrono = "0.4"
